vlib/v/checker/tests/incorrect_for_in_name_variable.vv
fn main() {
	a := [1, 2, 3]
	for _aa in a {
		println(_aa)
	}
}
